# KDE-Ambient-Light

./: .clang-format  CMakeLists.txt  README.md  build.sh  build_and_install.sh  install.sh  uninstall.sh
Service/: CMakeLists.txt  README.md
Service/Scripts/: ambient-light-installer.sh  ambient-light-uninstaller.sh  ambient-light.service
Service/Service Scripts/: README.md  ambient-light-installer.sh  ambient-light-uninstaller.sh  ambient-light.service
Service/include/: Backlight.hpp  Conf.hpp  ConfKeys.hpp  DBUS.hpp  KeyboardLed.hpp  Sensor.hpp  Tools.hpp
Service/src/: Backlight.cpp  Conf.cpp  DBUS.cpp  KeyboardLed.cpp  Sensor.cpp  Tools.cpp  main.cpp
ServiceConfigKeys/: CMakeLists.txt
ServiceConfigKeys/include/: ServiceConfKeys.hpp
